# claude-monitor-desktop

./: .gitattributes  .gitignore  HANDOFF-WINDOWS.md  README.md  mockup.html  package-lock.json  package.json
docs/: macos-support.md
docs/superpowers/plans/: 2026-06-16-claude-monitor-desktop.md  2026-06-17-auto-collapse-after-resolved.md  2026-06-17-cat-pet-mode.md  2026-06-17-portable-hook-config.md
docs/superpowers/specs/: 2026-06-16-claude-monitor-desktop-design.md  2026-06-17-auto-collapse-after-resolved-design.md  2026-06-17-cat-pet-mode-design.md  2026-06-17-portable-hook-config-design.md
hooks/: report-status.ps1  report-status.sh
server/: monitor_server.py  test_http_server.py  test_monitor_server.py
src/: app.js  auto-collapse.js  auto-collapse.test.js  cat.js  cat.test.js  index.html  render.js  render.test.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: hooks.rs  lib.rs  main.rs
