[package]
name = "claude-monitor-desktop"
version = "0.1.0"
description = "Claude Code 桌面悬浮窗监控"
authors = ["wushengzhou"]
edition = "2021"

[lib]
# lib 名与 bin 名区分（Windows 上 cargo 的限制，见 rust-lang/cargo#8519）
name = "claude_monitor_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.5"
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"
